migrator-tests/src/snapshots/migrator_tests__source_up::test_apply_till_migration_filename_pointer::{{closure}}__one_way___laxsingle field name change strategy: renamedb_state_9.snap
---
source: migrator-tests/src/lib.rs
expression: db_miration_schema_state
---
DbMigrationSchemaState {
    resources: DbInfo {
        analyzers: Analyzers(
            Info(
                {},
            ),
        ),
        functions: Functions(
            Info(
                {},
            ),
        ),
        params: Params(
            Info(
                {},
            ),
        ),
        scopes: Scopes(
            Info(
                {},
            ),
        ),
        tables: Tables(
            Info(
                {
                    "animal": DefineStatementRaw(
                        "DEFINE TABLE animal SCHEMAFULL PERMISSIONS NONE",
                    ),
                    "crop": DefineStatementRaw(
                        "DEFINE TABLE crop SCHEMAFULL PERMISSIONS NONE",
                    ),
                    "migration": DefineStatementRaw(
                        "DEFINE TABLE migration SCHEMAFULL PERMISSIONS NONE",
                    ),
                    "planet": DefineStatementRaw(
                        "DEFINE TABLE planet SCHEMAFULL PERMISSIONS NONE",
                    ),
                },
            ),
        ),
        tokens: Tokens(
            Info(
                {},
            ),
        ),
        users: Users(
            Info(
                {},
            ),
        ),
    },
    migration_meta: [
        StreamLinedMigration {
            basename: Basename(
                "migration_12_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "0c01e74e3d0049692c667de8d5e437e0f57c7dc2e0900f16a158a928f94bc53b",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_11_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_10_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "411ab60f7f2603da732055403cf13845a6355bb9db181ba8ee8d74be0baa6664",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_9_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "c2b0160e84425cd34ba70f768c54f5fd53a4d8ab3868d21bd72a57798f0ebed8",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_8_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "812b038accb8e6f4faf1ca5785dcd52eafe04253276a78562066c54e6a90da90",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_7_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "11d98c740871216b4097896e37d3dab602107d97b8af27684afca245659689d8",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_6_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_5_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "6f052b7bec10f8d14738b0cf9908fd193d6ab430d7f1696f0e361b70f79dd7ae",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_4_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "2d850089c51a49447395c7b5da3c2cad248644d7a649e2b3711c2d4510cd0ffc",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_3_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_2_gen_after_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
            ),
            checksum_down: None,
        },
        StreamLinedMigration {
            basename: Basename(
                "migration_1_init",
            ),
            extension: Extension(
                "surql",
            ),
            checksum_up: Checksum(
                "adceda8f9eaccd54bcb515250c8a9e2deee25a0c24228433e739fd3f72dfaab4",
            ),
            checksum_down: None,
        },
    ],
}
